[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-incident-openenv"
version = "1.0.0"
description = "AI Incident Response OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
server = "api.main:app"
